--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
         <!-- Cabeçalho do site -->
         
-        <img id="logo" src="../assets/logo.png" alt="LOGO">
+        <img id="logo" src="assets/logo.png" alt="LOGO">
         <!-- Logo da página, localizada uma pasta acima da raiz do projeto -->
 
         <nav id="menu-opcoes">
@@ -72,14 +72,13 @@
         <div class="redes-sociais">
             <!-- Ícones com links para redes sociais dos autores -->
             <a href="https://www.linkedin.com/in/pedro-henrique-pinter/">
-                <img class="imglink" src="../assets/linkedin.png">
+                <img class="imglink" src="assets/linkedin.png">
             </a>
             <a href="https://github.com/pedropinter">
-                <img class="imglink" src="../assets/whatsapp.png">
-                <!-- OBS: Esta imagem deveria representar o GitHub, mas é um ícone do WhatsApp -->
+                <img class="imglink" src="assets/whatsapp.png">
             </a>
             <a href="https://www.instagram.com/phpinter/">
-                <img class="imglink" src="../assets/instagram.png">
+                <img class="imglink" src="assets/instagram.png">
             </a>
         </div>
     </footer>
